[project]
name = "cnc_snapmaker_post_process"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "JostTim", email = "44769559+JostTim@users.noreply.github.com" },
]
dependencies = ["numpy>=2.1.3", "rich>=13.9.4"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
snaprocess = { call = "cnc_snapmaker_post_process:run" }
snapinject = { call = "cnc_snapmaker_post_process:inject" }

[tool.pdm]
distribution = true
